@@ -1,0 +1,72 @@
+#base name for generated variables, arrays etc and callback for buttons etc uses setBASE
+BASE:Connect
+MAKEDIALOG
+
+#window title
+WINDOWTITLE:New Connection
+#don't create dialog dismis buttons
+#NOBUTTONS:
+NOBOXCODE
+#function name for dialog create
+DONAME:doConnect
+TRANSIENTFOR:mainWindow
+NOBASEHEADER
+NORUNDIALOG
+
+#add an include file
+INCLUDE:"globals.h"
+#INCLUDE:<stdlib.h>
+
+#format smb://keithhedger:hogandnana@192.168.1.66:/media
+
+VARIABLE:char		*userName=getenv("USER"):global
+VARIABLE:char		*password=NULL:global
+VARIABLE:char		*server=NULL:global
+VARIABLE:char		*shareName=NULL:global
+VARIABLE:char		*mountNetCommand=NULL:global
+
+BEGINHBOX
+label:"User\\t\\t"
+textbox::userName:false
+ENDHBOX
+
+BEGINHBOX
+label:"Password\\t"
+textbox::password:false
+ENDHBOX
+
+BEGINHBOX
+label:"Server\\t\\t"
+textbox::server:false
+ENDHBOX
+
+BEGINHBOX
+label:"Share\\t\\t"
+textbox::shareName:false
+ENDHBOX
+
+BEGINHBOX
+addexpand
+radio:SMB:true
+addexpand
+radio:FTP:false
+addexpand
+radio:SSH:false
+addexpand
+radio:DAV:false
+addexpand
+ENDHBOX
+
+prefsmaker connect.conf ../../KKFileManager/src/connect
+#prefsmaker connect.conf connect conn.cpp ;./conn.cpp 
+
+
+
+
+
+
+
+
+
+
+
