@@ -1,4 +1,5 @@
 0.0.5
+Added new connection dialog.
 Fixed '//' in filepaths when '/' is current folder.
 Status bar now shows file/disk details in human readable form.
 Added status bar.
